add package structur

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,22 @@
 Package: robsidian
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
-Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+Title: Use Obsidian in R
+Version: 0.0.0.1
+Authors@R: person("Edgar", "Treischl", 
+                email = "copycat@edgar-treischl.de",
+                comment = c(ORCID = "0000-0001-5627-9125"),
+                role = c("aut", "cre"))
+Description: Provides an interface to the Obsidian API to interact with
+    Obsidian from R.
+License: CC BY 4.0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+URL: https://edgar-treischl.github.io/robsidian/
+Imports: 
+    bslib,
+    cli,
+    commonmark,
+    fs,
+    htmltools,
+    rmarkdown,
+    shiny
